data/derived/fa15/progs/unify/prog0161.ml.out
Characters 132-133:
  if k = 0 then k + mulByDigit t else [x]@ k + mulByDigit t;;
                               ^
Error: This expression has type int list
       but an expression was expected of type int
